# bullet-hell-shooter-editor

./: CMakeLists.txt  imgui.ini
physics_engine/: CMakeLists.txt
physics_engine/include/physics_engine/core/: Environment.hpp
physics_engine/include/physics_engine/physics/: Simulator.hpp
physics_engine/include/physics_engine/physics/physics_functions/: PhysicFunctionsModular.hpp  PhysicFunctionsTemplated.hpp
physics_engine/src/core/: Environment.cpp
physics_engine/src/physics/: Simulator.cpp
physics_engine/src/physics/physic_functions/: PhysicFunctions.cpp  PhysicFunctionsModular.cpp
src/app/: App.cpp  App.hpp  AppResources.cpp  AppResources.hpp  GameApp.cpp  GameApp.hpp
src/app/slides/: Editor.cpp  Editor.hpp  Game.cpp  Game.hpp  Presets.hpp  Shooter.cpp  Shooter.hpp
src/app/widgets/: Scene.cpp  extra.hpp
src/core/: Units.cpp  Units.hpp
src/core/tools/: Error.cpp  Error.hpp
src/core/universe/: Camera.hpp  Property.hpp  Universe.cpp  Universe.hpp
src/graphics/: Renderer.cpp  Renderer.hpp
